--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* @import '~bootstrap/dist/css/bootstrap.css'; */
+@import '~font-awesome/css/font-awesome';
+
+input, select, h2, h3, h4, h5, h6 {
+    border: none;
+    background: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+input:focus, textarea:focus {
+    outline: none !important;
+}
+
+option {
+    background-color: #ebeced;
+    color: #37454d;
+    padding: 5px;
+}
